--- a/extjs/resources/locales/en/extjs.json
+++ b/extjs/resources/locales/en/extjs.json
@@ -33,6 +33,7 @@
         "saturday": "Saturday",
         "defaultFormat": "m/d/Y",
         "defaultTimeFormat": "h:i a",
+        "firstDayOfWeek": "0",
         "formatCodes": {
             "a": "(this.getHours() < 12 ? 'a.m.' : 'p.m.')",
             "A": "(this.getHours() < 12 ? 'A.M.' : 'P.M.')"
