fix: ESM/CJS interop and locale parsing issues
- Add interop() helper for ESM/CJS module compatibility
- Restore global exports for i18next (required by ExtJS components)
- Fix firstDayOfWeek parseInt (was string, caused day order issues)
- Fix Spanish typos: "Si" → "Sí", "(0)" → "{0}"
- Update dependencies to use >= for flexibility
- Bump version to 0.4.0

--- a/extjs/resources/locales/es/extjs.json
+++ b/extjs/resources/locales/es/extjs.json
@@ -60,7 +60,7 @@
         "abort": "Abortar",
         "retry": "Volver a procesar",
         "ignore": "Ignorar",
-        "yes": "Si",
+        "yes": "Sí",
         "no": "No",
         "cancel": "Cancelar",
         "apply": "Aplicar",
@@ -98,7 +98,7 @@
         },
         "number": {
             "decimalsText": "El número máximo de decimales es {0}.",
-            "minValueText": "El valor mínimo para este campo es (0)",
+            "minValueText": "El valor mínimo para este campo es {0}",
             "maxValueText": "El valor máximo para este campo es {0}",
             "badFormatMessage": "El valor no es un número válido"
         },
