fix(locale/en): correct AM/PM format codes to match Sencha defaults
formatCodes for 'a' and 'A' were using periods (a.m./p.m.) but
parseCodes expected no periods (am/pm), causing timefield validation
errors when language is English.

Changed to match original Sencha ExtJS format codes.

--- a/extjs/resources/locales/en/extjs.json
+++ b/extjs/resources/locales/en/extjs.json
@@ -35,8 +35,8 @@
         "defaultTimeFormat": "h:i a",
         "firstDayOfWeek": "0",
         "formatCodes": {
-            "a": "(this.getHours() < 12 ? 'a.m.' : 'p.m.')",
-            "A": "(this.getHours() < 12 ? 'A.M.' : 'P.M.')"
+            "a": "(this.getHours() < 12 ? 'am' : 'pm')",
+            "A": "(this.getHours() < 12 ? 'AM' : 'PM')"
         },
         "parseCodes": {
             "A": {
