feat(locale): add RowOperations plugin translations
- Add triggerText/cancelText/deleteText for en/es/ca
- Add override for Ext.grid.plugin.RowOperations

--- a/extjs/resources/locales/ca/extjs.json
+++ b/extjs/resources/locales/ca/extjs.json
@@ -168,6 +168,11 @@
             }
         },
         "plugin": {
+            "rowOperations": {
+                "triggerText": "Selecciona",
+                "cancelText": "Fet",
+                "deleteText": "Elimina"
+            },
             "rowDragDrop": {
                 "dragText": "{0} files seleccionades"
             },
