--- a/extjs/resources/locales/es/extjs.json
+++ b/extjs/resources/locales/es/extjs.json
@@ -168,6 +168,11 @@
             }
         },
         "plugin": {
+            "rowOperations": {
+                "triggerText": "Seleccionar",
+                "cancelText": "Hecho",
+                "deleteText": "Eliminar"
+            },
             "rowDragDrop": {
                 "dragText": "{0} fila(s) seleccionada(s)"
             },
